Worked on resolving android embedded issue

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,8 @@ author: ESYS GmbH <info@esys.de>
 homepage: https://github.com/esysberlin/esys-flutter-share
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=1.16.0"
 
 dependencies:
   flutter:
@@ -55,3 +56,6 @@ flutter:
   #
   # For details regarding fonts in packages, see
   # https://flutter.io/custom-fonts/#from-packages
+
+
+
